@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
@@ -87,13 +86,13 @@ public class RoleServiceImpl implements IRoleService {
 		final List<RoleEx> findAll = this.roleExRepository.findAll(specification);
 		this.roleExRepository.deleteAll(findAll);
 		final List<Long> authIds = paramMap.get("authIdArray");
-		final List<RoleEx> list = authIds.stream().filter(a -> !(Objects.equals(a, 1L) || Objects.equals(a, 5L)))
+		final List<RoleEx> list = authIds.stream().filter(a -> (!Objects.equals(a, 1L) && !Objects.equals(a, 5L)))
 				.map(item -> {
 					final RoleEx roleEx = new RoleEx();
 					roleEx.setAuthId(item);
 					roleEx.setRoleId(roleId);
 					return roleEx;
-				}).collect(Collectors.toList());
+				}).toList();
 		try {
 			this.roleExRepository.saveAllAndFlush(list);
 		} catch (final Exception e) {
@@ -107,14 +106,12 @@ public class RoleServiceImpl implements IRoleService {
 		final Specification<RoleEx> where = (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get("roleId"),
 				roleId);
 		final Specification<RoleEx> specification = Specification.where(where);
-		return this.roleExRepository.findAll(specification).stream().map(RoleEx::getAuthId)
-				.collect(Collectors.toList());
+		return this.roleExRepository.findAll(specification).stream().map(RoleEx::getAuthId).toList();
 	}
 
 	@Override
 	public List<PgAuth> getAuthlist() {
-		return this.pgAuthRepository.findAll().stream().sorted(Comparator.comparing(PgAuth::getId))
-				.collect(Collectors.toList());
+		return this.pgAuthRepository.findAll().stream().sorted(Comparator.comparing(PgAuth::getId)).toList();
 	}
 
 	@Override
@@ -138,11 +135,10 @@ public class RoleServiceImpl implements IRoleService {
 		}
 		secondRoles.clear();
 		final Long roleId = roledOptional.get().getRoleId();
-		final List<Role> selectedRole = roles.stream().filter(a -> Objects.equals(a.getId(), roleId))
-				.collect(Collectors.toList());
+		final List<Role> selectedRole = roles.stream().filter(a -> Objects.equals(a.getId(), roleId)).toList();
 		secondRoles.addAll(selectedRole);
 		secondRoles.addAll(roles);
-		return secondRoles.stream().distinct().collect(Collectors.toList());
+		return secondRoles.stream().distinct().toList();
 	}
 
 	@Override
